[package]
name = "leetcode"
version = "0.1.0"
authors = ["EMayej <EMayej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
html2text = "0.2.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_with = { version = "1.9.0", features = ["json"] }
tera = "1.8.0"
